changed template email_confirmation_signup_message.html

--- a/templates/account/email/email_confirmation_signup_message.html
+++ b/templates/account/email/email_confirmation_signup_message.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     {% load account %}
-    <h3>Спасибо за регистрацию, {{ name }}!</h3>
+    <h3>Спасибо за регистрацию, {{ user.username }}!</h3>
     <p>
         Пожалуйста перейдите по <a href="{{ activate_url }}">ссылке</a> для активации Вашего аккаунта.
     </p>
